# app/serializers/person_serializer.rb
@@ -1,0 +1,3 @@
+class PersonSerializer < ActiveModel::Serializer
+  attributes :id, :name, :email, :address, :birthday
+end
